reload pets after posting one

--- a/site/mainpage.html
+++ b/site/mainpage.html
@@ -3,7 +3,7 @@
 <head>
     <title>Pet Status Tracker</title>
     <link rel="stylesheet" href="mainpage.css">
-    <script src="loadpets.js"></script>
+    <script type="module" src="loadpets.js"></script>
 </head>
 <!-- made in reference to https://jordanfinners.dev/blogs/how-to-easily-convert-html-form-to-json/ -->
 <body>
@@ -12,7 +12,7 @@
         <input type="text" id="new_pet_name" name="new_pet_name"><br><br>
         <button type="submit">Submit</button>
     <form>
-    <script src="newpetform.js"></script>
+    <script type="module" src="newpetform.js"></script>
     <table id=petDisplay>
         
     </table>    
